# ampersend-sdk

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  README.md  RELEASING.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  uv.toml
.github/workflows/: markdown-ci.yml  python-ci.yml  python-langchain-ampersend-release.yml  python-release.yml  skill-release.yml  typescript-ci.yml  typescript-release.yml
docs/: getting-started.md
docs/spec/ampersend-skill/: CONFORMANCE.md  SPEC.md
docs/spec/getting-started/: CONFORMANCE.md  SPEC.md
python/: README.md
python/ampersend-sdk/: README.md  pyproject.toml
python/ampersend-sdk/src/ampersend_sdk/a2a/client/: __init__.py  x402_remote_agent_toolset.py
python/ampersend-sdk/src/ampersend_sdk/a2a/server/: __init__.py  a2a_executor.py  a2a_monkey.py  ampersend_x402_server_executor.py  facilitator_x402_server_executor.py  to_a2a.py  x402_server_executor.py
python/ampersend-sdk/src/ampersend_sdk/ampersend/: __init__.py  client.py  treasurer.py  types.py
python/ampersend-sdk/src/ampersend_sdk/smart_account/: __init__.py  constants.py  sign.py
python/ampersend-sdk/src/ampersend_sdk/x402/http/: __init__.py  fastapi.py
python/ampersend-sdk/tests/unit/a2a/server/: test_ampersend_x402_server_executor.py
python/ampersend-sdk/tests/unit/a2a_client/client/: test_x402_remote_agent_toolset.py
python/ampersend-sdk/tests/unit/ampersend/: test_authorizer.py  test_client.py  test_response_models.py
python/ampersend-sdk/tests/unit/x402/http/: test_fastapi.py
python/examples/: README.md
python/examples/docs/: environment-variables.md  running-mcp-proxy.md
python/examples/src/examples/a2a/buyer/adk/: agent.py
python/examples/src/examples/a2a/buyer/local_agent/: agent.py
python/examples/src/examples/mcp/buyer/adk/: agent.py
python/langchain-ampersend/: pyproject.toml
python/langchain-ampersend/src/langchain_ampersend/: __init__.py
skills/ampersend/: SKILL.md
skills/ampersend/references/: commands.md  example-services.md  marketplace.md
typescript/: .prettierignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml
typescript/examples/fastmcp-x402-server/: package.json  tsconfig.build.json  tsconfig.json  tsconfig.src.json  tsconfig.tests.json  vitest.config.ts
typescript/examples/fastmcp-x402-server/src/: server.ts
typescript/examples/langchain-mcp/: package.json  tsconfig.json
typescript/examples/langchain-mcp/src/: index.ts
