[project]
name = "ampersend-sdk-python"
version = "0.0.26"
requires-python = ">=3.13"
dependencies = [
    "ampersend-sdk",
]

[tool.uv.sources]
ampersend-sdk = { workspace = true }

[tool.uv.workspace]
members = ["python/*"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["I", "F401"]

[tool.mypy]
python_version = "3.13"
strict = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["x402_a2a.*"]
follow_untyped_imports = true

[[tool.mypy.overrides]]
# Match the main monorepo's mypy posture (also has this override).
# Without it, `siwe.siwe` triggers `import-untyped` and the SDK
# carries a `# type: ignore[import-untyped]`. With it, the ignore
# becomes redundant — keep them in sync so neither side warns.
module = ["siwe.*"]
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disable_error_code = ["no-untyped-def", "arg-type", "index", "type-arg"]

[tool.pytest.ini_options]
testpaths = [
    "python/ampersend-sdk/tests",
    "python/langchain-ampersend/tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow running",
    "integration: marks tests as integration tests (deselect with \"-m 'not integration'\")",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "langchain-tests==1.1.2",
]
