[project]
name = "ampersend-sdk"
version = "0.0.26"
description = "Python SDK for ampersend"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "a2a-sdk>=0.3.7,<0.4",
    "google-adk>=1.14.0,<=1.14.1",
    "ampersend-a2a-x402>=1.0.1",
    "x402>=0.1.4,<1",
    "httpx>=0.27.0",
    "siwe>=4.0.0",
    "eth-account>=0.11.0",
    "eth-utils>=2.0.0",
    "pydantic>=2.0.0",
]

# Optional surfaces. Buyer-side (`X402HttpTransport`,
# `AmpersendTreasurer`) and A2A users don't pay the FastAPI import
# cost. `pip install ampersend-sdk[http]` pulls fastapi for sellers
# building paid HTTP APIs via `require_payment`.
# We rely on `x402[standard]` to bring fastapi transitively today —
# declaring it here decouples us from upstream's dep choices.
[project.optional-dependencies]
http = [
    "fastapi>=0.115",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]
